--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Kaixin Deng's Homepage
-page-top-title: Kaixin Deng's Homepage
-top-section-bg-text: Seeking Research and Collaboration Opportunities in AI!
-home-subtitle: Kaixin Deng
+page-top-title:  
+top-section-bg-text: Kaixin Deng's Homepage!
+home-subtitle: Kaixin Deng (トウ　カイケイ)
 copyright-text: ' '
