--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Kaixin Deng's Homepage
 page-top-title:  
 top-section-bg-text: Kaixin Deng's Homepage!
-home-subtitle: Kaixin Deng (トウ　カイケイ)
+home-subtitle: Kaixin Deng
 copyright-text: ' '
